# monstrum2d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml  main.cpp
.github/workflows/: monstrum2d.yml
assets/game/: brute.py  gameplay.py  gameplay_components.yaml  keyboard_component.yaml  map_generator.py  render.py
assets/main_menu/: main_menu_ecs.yaml  main_menu_system.py
assets/player/: player_ecs.yaml  player_system.py
src/: main.cpp
src/common/: common_types.h  default_value.h
src/core/: core.cpp  core.h  core_config.cpp  core_config.h
src/ecs/: asset.h  component.cpp  component.h  component_asset.cpp  component_asset.h  component_data.cpp  component_data.h  component_data_accessor.h  component_field_type.h  component_schema.cpp  component_schema.h  component_schema_loader.cpp  component_schema_loader.h  component_shema.cpp  component_shema.h  data_description.h  ecs.cpp  ecs.h  ecs_handler.cpp  ecs_handler.h  ecs_holder.cpp  ecs_holder.h  ecs_pool.h  entity.cpp  entity.h  filter.cpp  filter.h  holder.cpp  holder.h  pool.cpp  pool.h  system.cpp  system.h
src/ecs/systems/: service_system.cpp  service_system.h
src/py/: application.cpp  application.h  core_module.cpp  core_module.h  ecs_wrapper.cpp  ecs_wrapper.h  py.h  py_array.cpp  py_array.h  py_component.cpp  py_component.h  py_component_schema.cpp  py_component_schema.h  py_ecs.cpp  py_ecs.h  py_entity.cpp  py_entity.h  py_filter.cpp  py_filter.h  py_holder.cpp  py_holder.h  py_screen.cpp  py_screen.h  py_terminal.cpp  py_terminal.h  py_vector2d.cpp  py_vector2d.h  system_base.cpp  system_base.h  system_handler.cpp  system_handler.h
src/py_api/: application.cpp  application.h  core_module.h
src/terminal/: panel.h  screen.cpp  screen.h  terminal.cpp  terminal.h  types.h  widget.h
